fix(ui): DOMA-4642 Card title overflow and tag bottom padding was changed

--- a/packages/ui/src/components/Tag/style.less
+++ b/packages/ui/src/components/Tag/style.less
@@ -6,7 +6,7 @@
   .condo-typography-h6();
 
   margin: 0;
-  padding: 0.17em 0.83em;
+  padding: 0.17em 0.83em 0.33em;
   border: none;
   border-radius: @condo-global-border-radius-large;
 }
